--- a/templates/productinfo.html
+++ b/templates/productinfo.html
@@ -44,7 +44,7 @@ background-position: center center;
                 </div>
             </div>
             <div class="product-rate">
-                ₹ {{product.rate}}
+                $ {{product.rate}}0
             </div>
             {% if product.description %}
             <div class="product-description">{{product.description}}</div>
