--- a/templates/companypage2.html
+++ b/templates/companypage2.html
@@ -4,8 +4,9 @@
 
     {% block css %}
         <link rel="stylesheet" href="{% static 'css/company.css' %}">
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
         <link rel="stylesheet" href="{% static 'css/base2.css' %}">
-        
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -60,7 +61,7 @@
     padding: 6em;'></div>
                         <div class="product-info">
                             <div class="product-name">{{ item.name }}</div>
-                            <div class="product-price">₹ {{ item.rate }}</div>
+                            <div class="product-price">$ {{ item.rate }}</div>
                             <div class="buttons">
                                 {% if company.user == request.user %}
                                 <form action="{% url 'view' product_slug=item.slug %}">{% csrf_token %}
@@ -77,7 +78,7 @@
                                     <input type="submit" class="btn btn-primary" value="View">
                                 </form>
                                 <form action="#">{% csrf_token %}
-                                    <input type="submit" class="btn btn-primary" value="Add To Cart">
+                                    <input type="submit" class="btn btn-primary" onclick=add() value="Add To Cart">
                                 </form>
                                 {% endif %}
 
@@ -119,3 +120,51 @@
   </div>
 
     {% endblock content %}
+
+    {% block script %}
+<script>
+    function subtract() {
+        label = document.getElementById("quantity"); q = Number(label.value); if (q > 1) {
+            q = q - 1;
+            label.value = q;
+        }
+    }
+
+    function add() {
+        label = document.getElementById("quantity");
+        q = Number(label.value);
+        q = q + 1;
+        label.value = q;
+    }
+
+</script>
+
+
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementsByClassName("checkout")[0];
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function () {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
+{% endblock script %}
