--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -29,9 +29,41 @@
     </style>
 </head>
 
-<body>
-    <h1>Login up</h1>
-            <form method="post" action="{% url 'user_login' %}">
+<body> -->
+
+    {% extends 'home2.html' %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/wishlist.css' %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% endblock css %}
+
+
+{% block style %}
+.container {
+max-width: 50vw;
+padding: 15vh 0;
+}
+.container .btn {
+background: #3853d8 !important;
+border: none;
+}
+.container a {
+color: #3853d8 !important;
+}
+{% endblock style %}
+
+{% block heading %}
+Login
+{% endblock heading %}
+
+
+{% block info %}
+<div class="container">
+    <h1>Login</h1>
+            <!-- <form method="post" action="{% url 'user_login' %}">
             {% csrf_token %}
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
@@ -59,4 +91,34 @@
             <a href="{% url 'signup' %}">Don't have an account? Sign up!</a>
 </body>
 
-</html>
+</html> -->
+<form method="post" action="{% url 'user_login' %}">
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email name" name="email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+            else.</small>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
+            name="password">
+    </div>
+    <input type="submit" class="btn btn-primary" value="Login"></input>
+</form>
+
+
+{% for message in messages %}
+{{message}}
+{% endfor %}<br>
+
+<a href="{% url 'signup' %}">Don't have an account? Sign up!</a>
+</div>
+{% endblock info %}
+
+{% block script %}
+<script>
+</script>
+{% endblock script %} 
