--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,105 +1,136 @@
 
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
-    <style>
-        /* Change background color of buttons on hover */
-        .tab button:hover {
-            background-color: #ddd;
-        }
+{% extends 'home2.html' %}
+{% load static %}
 
-        /* Create an active/current tablink class */
-        .tab button.active {
-            background-color: #ccc;
-        }
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/wishlist.css' %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% endblock css %}
 
-        /* Style the tab content */
-        .tabcontent {
-            display: none;
-            padding: 6px 12px;
-            border: 1px solid #ccc;
-            border-top: none;
-        }
-    </style>
-</head>
+{% block style %}
+.container {
+max-width: 50vw;
+padding: 15vh 0;
+}
+.container .btn {
+background: #3853d8 !important;
+border: none;
+}
+.container a {
+color: #3853d8 !important;
+}
 
-<body>
+{% comment %} /* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+} {% endcomment %}
+
+/* Create an active/current tablink class */
+.nav button {
+    outline: none !important;
+} 
+
+.nav .active {
+    background-color: #3853d8 !important;
+    color: #fff !important;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+{% endblock style %}
+
+{% block heading %}
+Login
+{% endblock heading %}
+
+
+{% block info %}
+<div class="container">
     <h1>Sign up</h1>
-    <div class="tab">
-        <button class="tablinks active" onclick="openTab(event, 'Buy')">Buy</button>
-        <button class="tablinks" onclick="openTab(event, 'Sell')">Sell</button>
+
+    <ul class="nav nav-tabs">
+        <li>
+            <button class="tablinks active nav-link" onclick="openTab(event, 'Buy')">Buy</button>
+        </li>
+        <li>
+            <button class="tablinks nav-link" onclick="openTab(event, 'Sell')">Sell</button>
+        </li>
+        </ul>
+    
+        <div id="Buy" style="display:block" class="tabcontent">
+            <p>
+                <form action="{% url 'signup' %}" method="post">
+                    {% csrf_token %}            
+                    <div class="form-group">
+                        <label for="inlineFormInput">First Name</label>
+                        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="First Name" name="first_name">
+                    </div>
+                    <div class="form-group">
+
+                        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Last Name" name="last_name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Enter email" name="email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password1">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter password" name="password2">
+                    </div>
+                    <button type="submit" class="btn btn-primary" name="customerCreate">Submit</button>
+                </form>
+            </p>
+        </div>
+    
+        <div id="Sell" class="tabcontent">
+            <p>
+                <form action="{% url 'signup' %}" method="post">
+                    {% csrf_token %}            
+                    <div class="form-group">
+                        <label for="inlineFormInput">Company Name</label>
+                        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Company Name" name="company_name">
+                    </div>
+                    <div class="form-group">
+                        <label for="inlineFormInput">Company Name</label>
+                        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Company Name" name="company_name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Enter email" name="email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password1">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter password" name="password2">
+                    </div>
+                    <button type="submit" class="btn btn-primary" name="companyCreate">Submit</button>
+                </form>
+            </p>
+        </div>
+        <a href="{% url 'user_login' %}">Already have an account? Login!</a>
     </div>
-
-    <div id="Buy" style="display:block" class="tabcontent">
-        <h3>Buy</h3>
-        <p>
-            <form action="{% url 'signup' %}" method="post">
-                {% csrf_token %}            
-                <div class="form-group">
-                    <label class="sr-only" for="inlineFormInput">First Name</label>
-                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="First Name" name="first_name">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="inlineFormInput">Last Name</label>
-                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Last Name" name="last_name">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email" name="email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                        else.</small>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password1">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter password" name="password2">
-                </div>
-                <button type="submit" class="btn btn-primary" name="customerCreate">Submit</button>
-            </form>
-        </p>
-    </div>
-
-    <div id="Sell" class="tabcontent">
-        <h3>Sell</h3>
-        <p>
-            <form action="{% url 'signup' %}" method="post">
-                {% csrf_token %}            
-                <div class="form-group">
-                    <label class="sr-only" for="inlineFormInput">Company Name</label>
-                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Company Name" name="company_name">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email" name="email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                        else.</small>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password1">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter password" name="password2">
-                </div>
-                <button type="submit" class="btn btn-primary" name="companyCreate">Submit</button>
-            </form>
-        </p>
-    </div>
-
-
+    {% endblock info %}
+    {% block script %}
     <script>
         function openTab(evt, tabName) {
             var i, tabcontent, tablinks;
@@ -108,14 +139,12 @@
                 tabcontent[i].style.display = "none";
             }
             tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-            document.getElementById(tabName).style.display = "block";
-            evt.currentTarget.className += " active";
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
         }
-    </script>
+        document.getElementById(tabName).style.display = "block";
+        evt.currentTarget.className += " active";
+    }
+</script>
+{% endblock script %}
 
-</body>
-
-</html>
